# ionic_strength_calc_of_tris_edta_sol

./: README.md  calc_I_TE.ipynb  df_TE_0_BME.csv  df_all_TE_0_BME.csv  main.py  pyproject.toml  requirements.txt  setup.py
calc/: calc.py
src/ionic_strength_calc_of_tris_edta_sol/: calc.py
tests/: test.py
